syntax = "proto3";

package user;

service UserService {
    rpc Create(CreateUserDto) returns (User){}
    rpc FindByEmail(FindByEmailDto) returns (User){}
    rpc FindById(FindByIdDto) returns (User){}
    rpc Update(UpdateUserDto) returns (User){}
    rpc ChangePassword(ChangePasswordDto) returns (Empty){}
}

message Empty{}

message User{
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    int32 type = 5;
}
message FindByIdDto{
    string id = 1;
}
message FindByEmailDto{
    string email = 1;
}

message CreateUserDto{
    string name = 1;
    string email = 2;
    string password = 3;
}

message UpdateUserDto{
    string id = 1;
    string name = 2;
}

message ChangePasswordDto{
    string currentPassword = 1;
    string newPassword = 2;
    string id = 3;
}

message Users{
    repeated User users = 1;
}